# nyan-doom

./: .gitattributes  .gitignore  README.md
prboom2/: CMakeLists.txt  INSTALL  vcpkg.json
prboom2/ICONS/: penguino-doom.desktop  penguino-doom.exe.manifest
prboom2/cmake/: NyanConfigHeader.cmake  NyanDependencies.cmake  NyanHelpers.cmake  NyanOptions.cmake  NyanSanitiser.cmake  NyanTargetFeatures.cmake  PenguinoConfigHeader.cmake  PenguinoDependencies.cmake  PenguinoHelpers.cmake  PenguinoOptions.cmake  PenguinoSanitiser.cmake  PenguinoTargetFeatures.cmake  config.h.cin
prboom2/data/: CMakeLists.txt  rd_graphic.c  rd_output.c
prboom2/data/graphics/: amkills.ppm  amsecr.ppm  h_palsel.lmp  nyanstb1.ppm  penglogo.ppm  stfparmr.ppm  stfpbpak.ppm  stfpfly.ppm  stfpins.ppm  stfpinv.ppm  stfpitem.ppm  stfpmap.ppm  stfppstr.ppm  stfpsuit.ppm  stfpvis.ppm
prboom2/data/lumps/: CHXARMS0.lmp  CHXPSTR1.lmp  STFPSTR1.lmp  amitem2.lmp  amitem3.lmp  amkills2.lmp  amkills3.lmp  chexdeh.lmp  chxarms1.lmp  chxarms2.lmp  chxpstr0.lmp  dsdahud.lmp  dsdatc.lmp  h_ammo.lmp  h_mana.lmp  h_puzzle.lmp  h_weap.lmp  h_weap2.lmp  nyananim.lmp  nyanhud.lmp  nyantc.lmp  penghud.lmp  stbr124.lmp  stbr125.lmp  stfarm20.lmp  stfarm21x.lmp  stfarm22.lmp  stfarms0.lmp  stfarms1x.lmp  stfarms2.lmp  stfrmaul.lmp  stfrmor1.lmp  stfrmor2.lmp  stfrscr2.lmp  stfrscr3.lmp  stfrsped.lmp  stfrtome.lmp
prboom2/packaging/: CMakeLists.txt  DarwinGenerator.cmake  LinuxGenerator.cmake
prboom2/src/: CMakeLists.txt  am_map.c  am_map.h  d_client.c  d_deh.c  d_deh.h  d_englsh.h  d_main.c  d_player.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dsda.c  dsda.h  dstrings.c  e6y.c  e6y.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  g_overflow.c  g_overflow.h  gl_drawinfo.c  gl_intern.h  gl_light.c  gl_main.c  gl_map.c  gl_opengl.c  gl_opengl.h  gl_preprocess.c  gl_progress.c  gl_shader.c  gl_shadow.c  gl_sky.c  gl_struct.h  (+92 more)
prboom2/src/MUSIC/: flplayer.c  opl.c  opl_queue.c  oplplayer.c  portmidiplayer.c  vorbisplayer.c  xmpplayer.c
prboom2/src/SDL/: i_main.c  i_sndfile.c  i_sound.c  i_system.c  i_video.c
prboom2/src/deh/: ammo.c  bex_helper.c  bex_music.c  bex_pars.c  bex_pointer.c  bex_pointer.h  bex_sound.c  bex_sprites.c  bex_strings.c  cheat.c  cheat.h  compatibility.c  compatibility.h  deh.c  deh.h  frame.c  frame.h  func.c  func.h  misc.c  misc.h  nyan.c  nyan.h  pointer.c  sound.c  sprites.c  strings.c  strings.h  text.c  text.h  thing.c  thing.h  weapon.c
prboom2/src/dsda/: aim.c  ambient.cpp  animate.c  animate.cpp  animate.h  animinfo.cpp  animinfo.h  args.c  args.h  brute_force.c  configuration.c  configuration.h  console.c  cr_table.c  data_organizer.c  death.c  demo.c  endoom.c  episode.c  excmd.c  excmd.h  exdemo.c  exhud.c  exhud.h  features.c  features.h  (+48 more)
(+144 files in other folders)
